--- a/portfolio.html
+++ b/portfolio.html
@@ -250,7 +250,7 @@
           </address>
         </div>
         <div class="footer-soc-media">
-          <h3 class="soc-media-title">ПРИЄДНУЙТЕСЬ</h3>
+          <h3 class="soc-media-title footer-title">ПРИЄДНУЙТЕСЬ</h3>
           <ul class="list soc-media">
             <li class="soc-item">
               <a href="" class="link soc-link">
@@ -281,6 +281,15 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-form-container">
+          <h2 class="footer-form-title footer-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h2>
+          <form action="" class="footer-form">
+            <input type="email" name="email-input-footer" id="" class="footer-input" placeholder="E-mail"></input>
+            <button type="submit" class="footer-form-btn form-btn">Підписатися<svg width="24" height="24">
+              <use href="./image/symbol-defs.svg#icon-icon-send"></use>
+            </svg></button>
+          </form>
         </div>
       </div>
     </footer>
