--- a/portfolio.html
+++ b/portfolio.html
@@ -284,9 +284,9 @@
         </div>
         <div class="footer-form-container">
           <h2 class="footer-form-title footer-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h2>
-          <form action="" class="footer-form">
-            <input type="email" name="email-input-footer" id="" class="footer-input" placeholder="E-mail"></input>
-            <button type="submit" class="footer-form-btn form-btn">Підписатися<svg width="24" height="24">
+          <form  class="footer-form">
+            <input type="email" name="email-input-footer" class="footer-input" placeholder="E-mail">
+            <button type="submit" class="order-btn">Підписатися<svg class="order-btn-icon" width="24" height="24">
               <use href="./image/symbol-defs.svg#icon-icon-send"></use>
             </svg></button>
           </form>
